--- a/index.css
+++ b/index.css
@@ -36,3 +36,36 @@ header {
 footer {
     background-color: #343a40;
 }
+
+.circular-progress-bar {
+  width: 200px;
+  height: 200px;
+  position: relative;
+}
+
+.circular-progress-bar .circle,
+.circular-progress-bar .half-circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 10px solid #e0e0e0;
+  border-radius: 50%;
+  border-color: transparent transparent #3f51b5 #3f51b5;
+}
+
+.circular-progress-bar .half-circle {
+  clip: rect(0, 100px, 200px, 0);
+}
+
+.circular-progress-bar .percentage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+}
